--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -3,10 +3,12 @@ body {
   font-size: 14px;
 }
 
+.border { border: 1px solid; }
+
 /* navbar logo ------------------------------------------------------------ */
-.logo-navbar { margin-bottom: 120px; }
+.logo-navbar { margin-bottom: 72px; }
   .logo {
-    position: absolute;
+    position: fixed;
     top:10px;
     left: 100px;
     display: inline-block;
@@ -43,8 +45,67 @@ body {
     }
 
 /* navbar menu ------------------------------------------------------------ */
-.navbar {  z-index: 90 !important; }
-.navbar-fixed-top { position: absolute !important;}
-.navbar-nav li a {
-  padding: 25px 35px !important;
-}
+  .navbar {  z-index: 90 !important; }
+  /*.navbar-fixed-top { position: absolute !important;}*/
+  .navbar-nav li a {
+    padding: 25px 35px !important;
+  }
+
+/* home-screen ------------------------------------------------------------- */
+  #home {
+    background: url("../images/pizza-slider.jpg");
+    background-color: #222;
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-position: 50% 50%;
+    -webkit-background-size: cover;
+       -moz-background-size: cover;
+       -o-background-size: cover;
+        background-size: cover;
+    padding: 0;
+  }
+
+  #home .intro {
+  	position: absolute;
+  	width: 100%;
+  	top: 50%;
+  	left: 0;
+  	text-align: center;
+  	-webkit-transform: translate(0%, -50%);
+  	   -moz-transform: translate(0%, -50%);
+  		-ms-transform: translate(0%, -50%);
+  		 -o-transform: translate(0%, -50%);
+  			transform: translate(0%, -50%);
+  	padding: 0;
+    color: #fff;
+  }
+
+  #home .intro h1{
+    font-weight: 800;
+    font-family: 'Josefin Sans', sans-serif;
+    font-size: 60px;
+  }
+
+  #home .intro .ribbon {
+    background-color: #000;
+    padding: 10px 0;
+    margin-bottom: 40px;
+  }
+
+
+/* Block Section ----------------------------------------------------------- */
+  .block-section {
+    padding: 80px 0 100px;
+    background: #fff;
+    font-size: 18px;
+    color: #3c3c3c;
+  }
+    .block-section .block-section-header {
+      margin-bottom: 60px;
+    }
+    .block-section .pizza {
+      font-family: 'Josefin Sans', sans-serif;
+      font-weight: 700;
+    }
+    .block-section .rows-menu {margin-bottom: 60px;}
+    .block-section .price {padding-right: 30px;}
